# Pythonium

./: .bandit  .coveragerc  .flake8  .gitignore  .vulture_whitelist  CHANGELOG.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_indentation_fix.py  test_repair_comprehensive.py  test_syntax_errors.py.backup
docs/: API_DOCUMENTATION.md  DEVELOPER_GUIDE.md  README.md  TOOL_DEVELOPMENT_GUIDE.md  USER_GUIDE.md  api-reference.md  architecture.md  cli-reference.md  configuration.md  creating-detectors.md  llm-integration.md  mcp-server.md  output-formats.md
examples/: devteam_manager_demo.py
pythonium/: __init__.py  __main__.py  analyzer.py  ast_parser.py  cli.py  dashboard.py  database_paths.py  deduplication.py  filtering.py  hooks.py  incremental.py  loader.py  main.py  mcp_server.py  models.py  performance.py  settings.py  suppression.py  syntax_repair.py  version.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_extended.py  test_dashboard.py  test_detectors.py  test_detectors_advanced.py  test_detectors_circular.py  test_detectors_clone.py  test_detectors_complexity.py  test_detectors_consistency_extended.py  test_detectors_dead_code.py  test_detectors_new.py  test_detectors_patterns.py  test_detectors_security.py  test_devteam_prompt_optimization.py  test_hooks.py  test_improvements.py  test_incremental.py  test_issue_db.py  test_loader.py  test_main.py  test_main_entrypoint.py  test_main_module.py  test_mcp_server.py  test_performance.py  test_settings.py
validation/: README.md  (+1 more)
(+243 files in other folders)
