[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonium"
version = "0.1.0"
description = "A comprehensive static analysis tool for Python code quality and health"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "David Harvey", email = "david@ex.is"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "networkx>=2.6.0",
    "radon>=5.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
]
mcp = [
    "mcp>=0.9.0",
]

[project.scripts]
pythonium = "pythonium.cli:main"



[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
